modify item quantity on direct input type

--- a/styles/src/style.scss
+++ b/styles/src/style.scss
@@ -40,6 +40,13 @@ body {
     display: none;
 }
 
+#balance_info {
+    display:none;
+    color: #df2323;
+    padding: 10px;
+    background: #ffa4a4;
+}
+
 .Modal {
     align-items: center;
     justify-content: center;
